--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "responsive-engineer-hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://dennismuhnene.github.io/responsive-engineer-hub/",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite build; vite preview --host"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
