EmailJS is well setup

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,5 @@ VITE_EMAILJS_PUBLIC_KEY=your_emailjs_public_key
 # Note: Supabase is natively integrated in Lovable
 # Click the green Supabase button in the top right to connect
 # If you prefer manual setup, uncomment these:
-# VITE_SUPABASE_URL=https://your-project.supabase.co
-# VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
